--- a/frontend/src/app/product-show/product-show.component.html
+++ b/frontend/src/app/product-show/product-show.component.html
@@ -7,23 +7,24 @@
 <table >
   <tr>
     <th>ID</th>
-    <th>ชื่อสินค้า</th>
     <th>จำนวน</th>
     <th>ราคาต้นทุน</th>
     <th>ราคาขาย</th>
+    <th>ชื่อสินค้า</th>
     <th>ประเภทสินค้า</th>
     
   </tr>
 
 
-  <tr *ngFor="let addproduct of addproduct">
+  <tr *ngFor="let products of products" >
 
-      <td>{{addproduct.id}}</td>
-      <td>{{addproduct.nameproduct}}</td>
-      <td>{{addproduct.number}}</td>
-      <td>{{addproduct.price}}</td>
-      <td>{{addproduct.saleprice}}</td> 
-      <td>{{addproduct.typeproducts.typeproduct}}</td>
+      <td>{{products.id}}</td>
+      <td>{{products.product.number}}</td>
+      <td>{{products.product.price}}</td>
+      <td>{{products.product.saleprice}}</td> 
+
+      <td>{{products.addproduct}}</td>
+      <td>{{products.typeproducts.typeproduct}}</td>
     </tr>
 </table>
 </div>
